# AskPDF-AI

./: README.md  pyproject.toml  rav.yaml
backend/core/: config.py
backend/services/: file_processor.py
frontend/: eslint.config.mjs  package.json  tsconfig.json  tsconfig.tsbuildinfo
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: ChatComposer.tsx  ChatHeader.tsx  ChatThread.tsx  MarkdownMessage.tsx  Sidebar.tsx  ThemeScript.tsx  ThemeToggle.tsx  UploadStatus.tsx
frontend/hooks/: useDocChat.ts  useTheme.ts
frontend/lib/: api.ts  format.ts  types.ts
tests/: test_file_processor.py
