[project]
name = "AskPDF-AI"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "fastapi==0.116.1",
    "langchain==0.3.26",
    "langchain-community==0.3.27",
    "langchain-core>=0.3.80",
    "langchain-groq==0.3.6",
    "langchain-chroma==0.2.4",
    "langchain-huggingface==0.3.0",
    "langchain-text-splitters>=0.3.11",
    "pip>=25.3",
    "pydantic==2.11.7",
    "pydantic-settings==2.10.1",
    "python-dotenv==1.1.1",
    "python-multipart==0.0.20",
    "sentence-transformers==5.0.0",
    "uvicorn[standard]==0.35.0",
    "unstructured==0.23.1",
    "unstructured-inference==1.6.13",
    "pypdf==5.8.0",
    "pikepdf==9.10.2",
    "pdfminer.six==20250506",
    "PyMuPDF==1.26.3",
    "pi_heif==1.1.0",
    "pdf2image==1.17.0",
    "markdownify==0.14.1",
    "beautifulsoup4>=4.14.3",
    "rav>=0.4.3",
]
